--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,46 +1,24 @@
-Version 0.0.5
-<h2 align=center>t3a08-loops-by-Manvir.html</h2>
-<a href=" ">Good reference to Javascript Loops</a><br>
-<h4> Example input output code</ h4>
-<pre>
 
+  Version 0.0.1
+<h2 align-center›t3a08-loops-by-Manvir.html</h2>
+
+ch4> Example input output code</h4> <pre>
 </pre>
-
-<h4> Example working code</h4>
-Max loops: <input id="myNum01" type=number value="4" ><br>
-
-weird number: <input id="myWeird" type=number value="2" ><br>
+<h4> Example working code‹/h4>
+Max loops: <input id="myNum0l" type=number value="4" ›<br>
 <input type=button value="Basic For loop with Decisions" onclick="{
-document.getElementById('myDiv01').innerHTML
+document.getElementById('myDiv01').innerHTML = ''
+
 let myTemp = ''
-let myMax = parseInt(document.getElementById('myNum01').value)
-for (let myLoop = 0; myLoop < myMax; myLoop++ ){
+let myMax = parseInt (document.getElementById('myNum01').value)
+
+for (let myLoop = 0; myLoop < myMax; myLoop++){
 if (myLoop * 2 > myMax) {
 myTemp += ' cool'
 }
-myTemp += 'Loop number:' + myLoop +  '<br>'
+  
+myTemp += 'Loop number:' + myLoop + '<br>'
 }
-                                                                  
-                                                                  
-}">
-document. getElementById ('myDiv01').innerHTML = myTemp
-<input type-button value="Basic For loop only" onclick="{
-let myTemp
--
-let myMax = parseInt (document.getElementById ('myNum01').value)
-for (let myLoop = O; myLoop < myMax; myLoop++ ){
-myTemp += 'Loop number:' ' + myLoop + '<br>'
-                                                        }
-document. getElementById('myDiv01').innerHTML = myTemp
-}">
-<input type=button value="Even number identifier" onclick=" {
-document. getElementById('myDiv01').innerHTML= myTemp
-}">
-<script>
-                                                           function myExampleFunction(){
-                                                           let myIn01 = parseInt(document.getElementById('myText01').value)
-                                                           let mySum = myIn01 + myIn01
-                                                           let myReply = myIn01 + ' + ' + myIn01 + ' = ' + mySum
-                                                           return myReply
-                                                           }
-<body style="background-color:powderblue;">
+document.getElementById('myDiv01').innerHTML = myTemp
+  }">
+  <div id= "myDiv01">...</div>
