--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,11 +1,11 @@
 
-  Version 0.0.1
+  Version 0.0.2
 <h2 align-center›t3a08-loops-by-Manvir.html</h2>
 
 ch4> Example input output code</h4> <pre>
 </pre>
-<h4> Example working code‹/h4>
-Max loops: <input id="myNum0l" type=number value="4" ›<br>
+<h4> Example working code</h4>
+Max loops: <input id="myNum0l" type=number value="4" ><br>
 <input type=button value="Basic For loop with Decisions" onclick="{
 document.getElementById('myDiv01').innerHTML = ''
 
