--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -2,7 +2,7 @@
   Version 0.0.2
 <h2 align-center›t3a08-loops-by-Manvir.html</h2>
 
-ch4> Example input output code</h4> <pre>
+<h4> Example input output code</h4> <pre>
 </pre>
 <h4> Example working code</h4>
 Max loops: <input id="myNum0l" type=number value="4" ><br>
