--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,6 +1,6 @@
 
   Version 0.0.2
-<h2 align-center›t3a08-loops-by-Manvir.html</h2>
+<h2 align-center>t3a08-loops-by-Manvir.html</h2>
 
 <h4> Example input output code</h4> <pre>
 </pre>
@@ -10,7 +10,7 @@ Max loops: <input id="myNum0l" type=number value="4" ><br>
 document.getElementById('myDiv01').innerHTML = ''
 
 let myTemp = ''
-let myMax = parseInt (document.getElementById('myNum01').value)
+let myMax = parseInt(document.getElementById('myNum01').value)
 
 for (let myLoop = 0; myLoop < myMax; myLoop++){
 if (myLoop * 2 > myMax) {
