--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,5 +1,5 @@
 
-  Version 0.0.2
+  Version 0.0.3
 <h2 align-center>t3a08-loops-by-Manvir.html</h2>
 
 <h4> Example input output code</h4> <pre>
@@ -9,7 +9,7 @@ Max loops: <input id="myNum0l" type=number value="4" ><br>
 <input type=button value="Basic For loop with Decisions" onclick="{
 document.getElementById('myDiv01').innerHTML = ''
 
-let myTemp = ''
+let myTemp = '1'
 let myMax = parseInt(document.getElementById('myNum01').value)
 
 for (let myLoop = 0; myLoop < myMax; myLoop++){
