--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -1,5 +1,5 @@
 
-  Version 0.0.3
+  Version 0.0.2
 <h2 align-center>t3a08-loops-by-Manvir.html</h2>
 
 <h4> Example input output code</h4> <pre>
@@ -7,7 +7,7 @@
 <h4> Example working code</h4>
 Max loops: <input id="myNum0l" type=number value="4" ><br>
 <input type=button value="Basic For loop with Decisions" onclick="{
-document.getElementById('myDiv01').innerHTML = ''
+document.getElementById('myDiv01').innerHTML = '1'
 
 let myTemp = '1'
 let myMax = parseInt(document.getElementById('myNum01').value)
