--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -7,9 +7,9 @@
 <h4> Example working code</h4>
 Max loops: <input id="myNum0l" type=number value="4" ><br>
 <input type=button value="Basic For loop with Decisions" onclick="{
-document.getElementById('myDiv01').innerHTML = '1'
+document.getElementById('myDiv01').innerHTML = ''
 
-let myTemp = '1'
+let myTemp = ''
 let myMax = parseInt(document.getElementById('myNum01').value)
 
 for (let myLoop = 0; myLoop < myMax; myLoop++){
