--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,4 +1,4 @@
-Version 0.0.12
+Version 0.0.13
 <h2 align=center>T3A07 Decisions by Manvir</h2>
 <a href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
 Javascript innerHTML value by Manvir</a><br>
@@ -20,7 +20,7 @@ let myGreeting = 'Good day';
 }">
 
 
-<input type=button value="if...else" onclick"{
+<input type=button value="if...else" onclick="{
 let myIn01 = parseFloat(document.getElementById('myNum01').value)
 if (myIn01 >= 3){
    document.getElementById('myDiv01').innerHTML= myIn01 + ' is greater than 3'
