--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -22,3 +22,4 @@ myTemp += 'Loop number:' + myLoop + '<br>'
 document.getElementById('myDiv01').innerHTML = myTemp
   }">
   <div id= "myDiv01">...</div>
+<body style="background-color:powderblue;">
