--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,5 @@ hi
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
-  <li><a href="..">...</a>
+  <li><a href="game.html">game.html</a>
   
