--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@ hi
   <li><a href="T3A06-Variables-Manvir">T3A06-Variables-Manvir.html</a>
   <li><a href="T3A07-Decisions-Manvir.html">T3A07-Decisions-Manvir.html</a>
   <li><a href="T3A08-loops-Manvir.html">T3A08-loops-Manvir.html</a>
-  <li><a href="..">...</a>
+  <li><a href="spy.html">spy.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
