--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@ hi
   <li><a href="T3A08-loops-Manvir.html">T3A08-loops-Manvir.html</a>
   <li><a href="spy.html">spy.html</a>
   <li><a href="moving-background.html">moving-background.html</a>
-  <li><a href="..">...</a>
+  <li><a href="canvas.html">canvas.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="game.html">game.html</a>
