--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,22 @@ hi
   <li><a href="spy.html">spy.html</a>
   <li><a href="moving-background.html">moving-background.html</a>
   <li><a href="canvas.html">canvas.html</a>
+  <li><a href="storage.html">storage.html</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
+  <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="game.html">game.html</a>
