--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@ hi
   <li><a href="moving-background.html">moving-background.html</a>
   <li><a href="canvas.html">canvas.html</a>
   <li><a href="storage.html">storage.html</a>
-  <li><a href="..">...</a>
+  <li><a href="translate.html">translate.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
