--- a/public/T3A08-loops-Manvir.html
+++ b/public/T3A08-loops-Manvir.html
@@ -21,5 +21,32 @@ myTemp += 'Loop number:' + myLoop + '<br>'
 }
 document.getElementById('myDiv01').innerHTML = myTemp
   }">
+
+
+
+
+Max loops: <input id="myNum01" type=number value="4" ><br>
+Increment by: <input id="myNum02" type=number value="1" ><br>
+<input type=button value="Basic For loop with Decisions" onclick="{
+document.getElementById('myDiv01').innerHTML = ''
+let myTemp = ''
+let myMax = parseInt(document.getElementById('myNum01').value)
+let myInc = parseInt(document.getElementById('myNum02').value)
+for (let myLoop = 0; myLoop < myMax; myLoop += myInc){
+if (myLoop * 2 > myMax) {
+myTemp += ' cool'
+}
+  
+myTemp += 'Loop number:' + myLoop + '<br>'
+}
+document.getElementById('myDiv01').innerHTML = myTemp
+}">
+
+
+
+
+
+
+
   <div id= "myDiv01">...</div>
 <body style="background-color:powderblue;">
