--- a/public/T3A07-Decisions-Manvir.html
+++ b/public/T3A07-Decisions-Manvir.html
@@ -1,8 +1,13 @@
 Version 0.0.13
 <h2 align=center>T3A07 Decisions by Manvir</h2>
-<a href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements.
-Javascript innerHTML value by Manvir</a><br>
+
+<!-- Reference to decision making -->
+<a href="https://www.w3schools.com/js/js_if_else.asp">Good reference to decisions if ... else statements. Javascript innerHTML value by Manvir</a><br>
+
+<!-- Note on logical operators -->
 Note: !=Not, &&=And,   =or <br>
+
+<!-- Example Input Output Code -->
 <h4> Example Input Output Code</h4>
 <pre>
 let myHour = 20
@@ -10,7 +15,11 @@ if (myHour < 18) {
 let myGreeting = 'Good day';
 }
 </pre>
+
+<!-- Example Working Code -->
 <h4>Example Working Code</h4>
+
+<!-- Simple if statement -->
 <input id= "myNum01" type=number value="4"> <br>
 <input type=button value="simple if statement for decision making" onclick="{
    let myIn01 = parseFloat(document.getElementById('myNum01').value)
@@ -18,8 +27,9 @@ let myGreeting = 'Good day';
          document.getElementById('myDiv01').innerHTML =myIn01='is greater than 3'
    }
 }">
+<br>
 
-
+<!-- if...else statement -->
 <input type=button value="if...else" onclick="{
 let myIn01 = parseFloat(document.getElementById('myNum01').value)
 if (myIn01 >= 3){
@@ -27,9 +37,9 @@ if (myIn01 >= 3){
 } else {
    document.getElementById('myDiv01').innerHTML= myIn01 + ' is less than 3' }
 }">
+<br>
 
-
-
+<!-- complex if statement -->
 <input type=button value="complex if" onclick="{
    let myIn01 = parseFloat(document.getElementById('myNum01').value)
    if ((myIn01 !=3 || myIn01 > -3) && myIn01 <=100 ){
@@ -38,8 +48,9 @@ if (myIn01 >= 3){
       document.getElementById('myDiv01').innerHTML = myIn01 + ' is not complex'
    }
 }">
+<br>
 
-
-
+<!-- Output div -->
 <div id="myDiv01">...</div>
+
 <body style="background-color:powderblue;">
