--- a/public/T1A02-basic-web-page.html
+++ b/public/T1A02-basic-web-page.html
@@ -4,7 +4,7 @@
     <title>Manvir's web stuff</title>
   </head>
   <body style="background-color:powderblue;">
-    <h5>Version 0.0.5</h5>
+    <h5>Version 0.0.7</h5>
     <h1 align=center>T3A02-Web Basics by Manvir.html</h1>
     <a href="http://www.google.ca">Link to Google</a><br>
     Plain text <b>and</b> <i>can you put them together</i><br>
@@ -25,4 +25,16 @@
     <input type="button" value="2. Input/output" onClick="{document.getElementById('myDiv01').innerHTML = 'Input is a way to to feed some data into a program. Output is the data that comes out of a program<br>'}">
     <input type="button" value="3. Decisions" onClick="{document.getElementById('myDiv01').innerHTML = ' Decisions use the if statement tru false variable decisions<br>'}">
     <input type="button" value="4. Events" onClick="{document.getElementById('myDiv01').innerHTML = ' Events are actions that do something. For example, a button is an event <br>'}">
-    <input type="button" value="5. Objects" onClick="{document.getElementById('myDiv01').innerHTML = ' An Object could be variables, functions and data structures<br
+    <input type="button" value="5. Objects" onClick="{document.getElementById('myDiv01').innerHTML = ' An Object could be variables, functions and data structures<br>
+                                                       <input type= button value="6. Functions" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' A function is code that accomplishes a specific task<br>'
+                                                      }">
+    <input type= button value="7. Loops" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Loops are instructios that repeat untill a condition is met<br>'
+                                                  }">
+    <input type= button value="8. Arrays" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Arrays are data structures<br>'
+                                                   }">
+    <input type= button value="9. Classes" onclick="{
+                                       docuent.getElementById('myDiv01').innerHTML = ' Classes are like coding templates you can get from online<br>'
+                                                    }">
