--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,6 @@ hi
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
-  <li><a href="..">...</a>
+  <li><a href="gam.html">gam.html</a>
   <li><a href="game.html">game.html</a>
   
