--- a/public/spy.html
+++ b/public/spy.html
@@ -7,8 +7,8 @@
    myString = document.getElementById('myArea01').value.toLowerCase().split('')
    for (let myLoop=0;   myLoop < myString.length; myLoop++){
       myTemp = myString[myLoop]
-      if (myString[myLoop] == 'e') {myTemp  = 'f'} 
-      if (myString[myLoop] == 'h') {myTemp  = 'i'} 
+      if (myString[myLoop] == 'e') {myTemp  = 's'} 
+      if (myString[myLoop] == 'h') {myTemp  = 'm'} 
       myString[myLoop] = myTemp
    }
    document.getElementById('myArea02').value = myString.join('')
