--- a/public/spy.html
+++ b/public/spy.html
@@ -1,4 +1,4 @@
-<h1 align=center>t2a06-spy-name.html</h1>
+<h1 align=center>t2a06-spy-Manvir.html</h1>
 <textarea id="myArea01" rows=4 cols=70>Hello how are you</textarea><br> 
 
 
@@ -24,3 +24,20 @@
 
 
 <textarea id="myArea03" rows=4 cols=70></textarea><br> 
+
+
+
+
+
+
+<input type=button value="decrypt" onclick="{
+   let myTemp = ''
+   myString = document.getElementById('myArea02').value.toLowerCase().split('')
+   for (let myLoop=0;   myLoop < myString.length; myLoop++){
+      myTemp = myString[myLoop]
+      if (myString[myLoop] == 's') {myTemp  = 'e'} 
+      if (myString[myLoop] == 'm') {myTemp  = 'h'} 
+      myString[myLoop] = myTemp
+   }
+   document.getElementById('myArea03').value = myString.join('')
+}">
