--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@ hi
   <li><a href="canvas.html">canvas.html</a>
   <li><a href="storage.html">storage.html</a>
   <li><a href="translate.html">translate.html</a>
-  <li><a href="..">...</a>
+  <li><a href="tax.html">tax.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
