--- a/public/tax.html
+++ b/public/tax.html
@@ -29,5 +29,6 @@
 			result.textContent = `Your tax amount is ${taxAmount.toFixed(2)}.`;
 		});
 	</script>
+	<body style="background-color:powderblue;">
 </body>
 </html>
