--- a/public/spy.html
+++ b/public/spy.html
@@ -9,7 +9,7 @@
       myTemp = myString[myLoop]
       if (myString[myLoop] == 'e') {myTemp  = 's'} 
       if (myString[myLoop] == 'h') {myTemp  = 'm'} 
-      if (myString[myLoop] == 'w') {myTemp  = 'o'} 
+      if (myString[myLoop] == 'r') {myTemp  = 'p'} 
       if (myString[myLoop] == 'i') {myTemp  = 'z'} 
       myString[myLoop] = myTemp
    }
@@ -37,7 +37,7 @@
       myTemp = myString[myLoop]
       if (myString[myLoop] == 's') {myTemp  = 'e'} 
       if (myString[myLoop] == 'm') {myTemp  = 'h'} 
-      if (myString[myLoop] == 'o') {myTemp  = 'w'} 
+      if (myString[myLoop] == 'p') {myTemp  = 'r'} 
       if (myString[myLoop] == 'z') {myTemp  = 'i'} 
       myString[myLoop] = myTemp
    }
