--- a/public/spy.html
+++ b/public/spy.html
@@ -57,10 +57,32 @@
    myString = document.getElementById('myArea02').value.toLowerCase().split('')
    for (let myLoop=0;   myLoop < myString.length; myLoop++){
       myTemp = myString[myLoop]
-      if (myString[myLoop] == 's') {myTemp  = 'e'} 
-      if (myString[myLoop] == 'm') {myTemp  = 'h'} 
-      if (myString[myLoop] == 'p') {myTemp  = 'r'} 
-      if (myString[myLoop] == 'z') {myTemp  = 'i'} 
+ if (myString[myLoop] == 'a') {myTemp  = 'z'} 
+      if (myString[myLoop] == 'b') {myTemp  = 'y'} 
+      if (myString[myLoop] == 'c') {myTemp  = 'x'} 
+      if (myString[myLoop] == 'd') {myTemp  = 'w'} 
+      if (myString[myLoop] == 'e') {myTemp  = 'v'} 
+      if (myString[myLoop] == 'f') {myTemp  = 'u'} 
+      if (myString[myLoop] == 'g') {myTemp  = 't'} 
+      if (myString[myLoop] == 'h') {myTemp  = 's'} 
+      if (myString[myLoop] == 'i') {myTemp  = 'r'} 
+      if (myString[myLoop] == 'j') {myTemp  = 'q'} 
+      if (myString[myLoop] == 'k') {myTemp  = 'p'} 
+      if (myString[myLoop] == 'l') {myTemp  = 'o'}
+      if (myString[myLoop] == 'm') {myTemp  = 'n'} 
+      if (myString[myLoop] == 'n') {myTemp  = 'm'} 
+      if (myString[myLoop] == 'o') {myTemp  = 'l'} 
+      if (myString[myLoop] == 'p') {myTemp  = 'k'} 
+      if (myString[myLoop] == 'q') {myTemp  = 'j'} 
+      if (myString[myLoop] == 'r') {myTemp  = 'i'} 
+      if (myString[myLoop] == 's') {myTemp  = 'h'} 
+      if (myString[myLoop] == 't') {myTemp  = 'g'}
+      if (myString[myLoop] == 'u ') {myTemp  = 'f'} 
+      if (myString[myLoop] == 'v') {myTemp  = 'e'} 
+      if (myString[myLoop] == 'w') {myTemp  = 'd'} 
+      if (myString[myLoop] == 'x') {myTemp  = 'c'} 
+      if (myString[myLoop] == 'w') {myTemp  = 'b'} 
+      if (myString[myLoop] == 'z') {myTemp  = 'a'}
       myString[myLoop] = myTemp
    }
    document.getElementById('myArea03').value = myString.join('')
