--- a/public/spy.html
+++ b/public/spy.html
@@ -33,6 +33,15 @@
       if (myString[myLoop] == 'c') {myTemp  = 'x'} 
       if (myString[myLoop] == 'b') {myTemp  = 'y'} 
       if (myString[myLoop] == 'a') {myTemp  = 'z'}
+      if (myString[myLoop] == '1') {myTemp  = '9'} 
+      if (myString[myLoop] == '2') {myTemp  = '8'} 
+      if (myString[myLoop] == '3') {myTemp  = '7'} 
+      if (myString[myLoop] == '4') {myTemp  = '6'}
+      if (myString[myLoop] == '5') {myTemp  = '5'} 
+      if (myString[myLoop] == '6') {myTemp  = '4'} 
+      if (myString[myLoop] == '7') {myTemp  = '3'} 
+      if (myString[myLoop] == '8') {myTemp  = '2'} 
+      if (myString[myLoop] == '9') {myTemp  = '1'} 
       myString[myLoop] = myTemp
    }
    document.getElementById('myArea02').value = myString.join('')
