--- a/public/spy.html
+++ b/public/spy.html
@@ -93,6 +93,15 @@
       if (myString[myLoop] == 'x') {myTemp  = 'c'} 
       if (myString[myLoop] == 'y') {myTemp  = 'b'}
       if (myString[myLoop] == 'z') {myTemp  = 'a'}
+      if (myString[myLoop] == '9') {myTemp  = '1'} 
+      if (myString[myLoop] == '8') {myTemp  = '2'} 
+      if (myString[myLoop] == '7') {myTemp  = '3'} 
+      if (myString[myLoop] == '6') {myTemp  = '4'}
+      if (myString[myLoop] == '5') {myTemp  = '5'} 
+      if (myString[myLoop] == '4') {myTemp  = '6'} 
+      if (myString[myLoop] == '3') {myTemp  = '7'} 
+      if (myString[myLoop] == '2') {myTemp  = '8'} 
+      if (myString[myLoop] == '1') {myTemp  = '9'} 
       myString[myLoop] = myTemp
    }
    document.getElementById('myArea03').value = myString.join('')
