--- a/public/spy.html
+++ b/public/spy.html
@@ -42,6 +42,7 @@
       if (myString[myLoop] == '7') {myTemp  = '3'} 
       if (myString[myLoop] == '8') {myTemp  = '2'} 
       if (myString[myLoop] == '9') {myTemp  = '1'} 
+      if (myString[myLoop] == '!') {myTemp  = '?'}
       myString[myLoop] = myTemp
    }
    document.getElementById('myArea02').value = myString.join('')
@@ -102,6 +103,7 @@
       if (myString[myLoop] == '3') {myTemp  = '7'} 
       if (myString[myLoop] == '2') {myTemp  = '8'} 
       if (myString[myLoop] == '1') {myTemp  = '9'} 
+      if (myString[myLoop] == '?') {myTemp  = '!'}
       myString[myLoop] = myTemp
    }
    document.getElementById('myArea03').value = myString.join('')
