--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ hi
   <li><a href="translate.html">translate.html</a>
   <li><a href="tax.html">tax.html</a>
   <li><a href="sound.html">sound.html</a>
-  <li><a href="..">...</a>
+  <li><a href="sort.html">sort.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
