--- a/public/moving-background.html
+++ b/public/moving-background.html
@@ -24,4 +24,4 @@
   document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) + 10 + 'px'
 }"><br><br>
 
-<image id="myImage1" src=https://i.ebayimg.com/images/g/NB8AAOSwy11eYX96/s-l1600.jpg" style="position:relative; width:100px; height:80px; top:0px; left:0px;" src="myImage01.jpg">
+<image id="myImage1" src=https://i.ebayimg.com/images/g/NB8AAOSwy11eYX96/s-l1600.jpg" style="position:relative; width:100px; height:80px; top:0px; left:0px;" src="i.ebayimg.com/images/g/NB8AAOSwy11eYX96/s-l1600.jpg">
