--- a/public/moving-background.html
+++ b/public/moving-background.html
@@ -7,7 +7,7 @@
 
 <input id="myButton01" type=button value="background move left" onclick="{
   myTemp = '100px 0px'
-  myGlobalX -= 25
+  myGlobalX -= 30
   myTemp =  myGlobalX + 'px 0px'
   document.getElementById('myBody').style.backgroundPosition =myTemp
 }">
@@ -24,4 +24,5 @@
   document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) + 10 + 'px'
 }"><br><br>
 
-<image id="myImage01" src=https://cdn.drivek.com/configurator-icon/cars/fr/$original$/BMW/M8-COUPE/40903_COUPE-2-DOORS/bmw-m8-coupe-2022-side-view.png" style="position:relative; width:400px; height:290px; top:500px; left:0px;" src="https://cdn.drivek.com/configurator-icon/cars/fr/$original$/BMW/M8-COUPE/40903_COUPE-2-DOORS/bmw-m8-coupe-2022-side-view.png">
+<img id="myImage01" src="https://cdn.drivek.com/configurator-icon/cars/fr/$original$/BMW/M8-COUPE/40903_COUPE-2-DOORS/bmw-m8-coupe-2022-side-view.png" style="position:absolute; width:400px; height:290px; left:0px;">
+
