--- a/public/moving-background.html
+++ b/public/moving-background.html
@@ -24,5 +24,7 @@
   document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) + 10 + 'px'
 }"><br><br>
 
-<img id="myImage01" src="https://cdn.drivek.com/configurator-icon/cars/fr/$original$/BMW/M8-COUPE/40903_COUPE-2-DOORS/bmw-m8-coupe-2022-side-view.png" style="position:absolute; width:400px; height:290px; left:0px;">
-
+<img id="myImage01" src="https://cdn.drivek.com/configurator-icon/cars/fr/$original$/BMW/M8-COUPE/40903_COUPE-2-DOORS/bmw-m8-coupe-2022-side-view.png" style="position:absolute; width:400px; height:290px; left:0px; top:200px;">
+<input type=button value="Image Down" onclick="{
+  document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) + 10 + 'px'
+}">
