--- a/public/moving-background.html
+++ b/public/moving-background.html
@@ -25,7 +25,7 @@
 }"><br><br>
 
 <img id="myImage01" src="https://cdn.drivek.com/configurator-icon/cars/fr/$original$/BMW/M8-COUPE/40903_COUPE-2-DOORS/bmw-m8-coupe-2022-side-view.png" style="position:absolute; width:570px; height:290px; left:0px; top:360px;">
-<input type=button value="Image Down" onclick="{
+<input type=button value="Move Down" onclick="{
   document.getElementById('myImage01').style.top = parseInt(document.getElementById('myImage01').style.top) + 10 + 'px'
 }">
 
