--- a/public/moving-background.html
+++ b/public/moving-background.html
@@ -20,7 +20,7 @@
     
 }">
 
-<input type=button value="Image Right" onclick="{
+<input type=button value="Move Forward" onclick="{
   document.getElementById('myImage01').style.left = parseInt(document.getElementById('myImage01').style.left) + 10 + 'px'
 }"><br><br>
 
