--- a/public/canvas.html
+++ b/public/canvas.html
@@ -1,65 +1,36 @@
 <h2 align=center>t2a08-canvas by Fred</h2>
-You use loops and variables to make fast fancy drawings <br><br>
 
-<input type=button value=".lineTo(30,200)" onclick="{
-   myContext.beginPath();
-   myContext.lineWidth = 1;   
-   myContext.moveTo(20,10);
-   myContext.lineTo(30,200);
-   myContext.stroke();
-}">
+<div class="button-group">
+  <h3>Drawing Tools</h3>
+  <div class="button-row">
+    <button class="drawing-button" data-command=".lineTo(30,200)">Draw Line</button>
+    <button class="drawing-button" data-command=".arc(95, 50, 40, 0, 2 * Math.PI)">Draw Circle</button>
+    <button class="drawing-button" data-command=".quadraticCurveTo(100,220,240,110)">Draw Curve</button>
+  </div>
+</div>
 
-<input type=button value=".arc(95, 50, 40, 0, 2 * Math.PI)" onclick="{
-   myContext.beginPath();
-   myContext.lineWidth = 10;
-   myContext.strokeStyle = 'green';
-   myContext.arc(95, 50, 40, 0, 2 * Math.PI);
-   myContext.stroke();
-}">
+<div class="button-group">
+  <h3>Text Tools</h3>
+  <div class="button-row">
+    <button class="drawing-button" data-command=".fillText('Hello World', 400, 100)">Add Text</button>
+  </div>
+</div>
 
-<input type=button value=".fillText('Hello World', 400, 100)" onclick="{
-   myContext.font = '20px Arial';
-   myContext.fillText('Hello World', 400, 100);
-   myContext.translate(400, 100);  
-   myContext.rotate(60 * Math.PI / 180); 
-   myContext.fillText('Hello World', 10, 10);
-   myContext.stroke();
-   myContext.resetTransform();  
-   //myContext.rotate(-60 * Math.PI / 180); 
-}">
+<div class="button-group">
+  <h3>Color Tools</h3>
+  <div class="button-row">
+    <button class="color-button" data-command=".createLinearGradient(100, 300, 200, 400)">Gradient Fill</button>
+    <button class="color-button" data-command=".fillStyle = 'red'">Red Fill</button>
+    <button class="color-button" data-command=".fillStyle = 'blue'">Blue Fill</button>
+  </div>
+</div>
 
-<input type=button value=".quadraticCurveTo(100,220,240,110)" onclick="{
-   myContext.beginPath();
-   myContext.moveTo(300,100);
-   myContext.quadraticCurveTo(100,220,240,110);
-   myContext.stroke();
-}">
+<div class="button-group">
+  <h3>Clear Tools</h3>
+  <div class="button-row">
+    <button class="clear-button" data-command="clearRect(20, 20, 50, 50)">Clear Square</button>
+    <button class="clear-button" data-command="myContext.clearRect(0, 0, myCanvas.width, myCanvas.height)">Clear All</button>
+  </div>
+</div>
 
-
-
-<input type=button value=".createLinearGradient(100, 300, 200, 400)" onclick="{
-   let myGradient = myContext.createLinearGradient(100, 300, 200, 400);
-   myGradient.addColorStop(0, 'red');
-   myGradient.addColorStop(0.5, 'blue');
-   myGradient.addColorStop(1, 'yellow');
-   myContext.fillStyle = myGradient;
-   myContext.fillRect(100, 300, 200, 400);
-   // reset fillstyle
-   myContext.fillStyle = 'black';
-}"><br><br>
-
-<input type=button value="clearRect(20, 20, 50, 50)" onclick="{
-   myContext.clearRect(20, 20, 50, 50);
-}">
-
-<input type=button value="Clear all" onclick="{
-   myContext.clearRect(0, 0, myCanvas.width, myCanvas.height);
-}"><br><br>
-
-<canvas id="myCoolTag" width="1000" height="600" style="border:1px solid #000000;"></canvas>
-
-<script>
-   // set up global variables
-   let myCanvas=document.getElementById('myCoolTag');
-   let myContext=myCanvas.getContext('2d');
-</script>
+<canvas id="myCoolTag" width="1000" height="600" style="border:1px solid #000000;" alt="Drawing canvas"></canvas>
