--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@ hi
   <li><a href="tax.html">tax.html</a>
   <li><a href="sound.html">sound.html</a>
   <li><a href="sort.html">sort.html</a>
-  <li><a href="..">...</a>
+  <li><a href="functions.html">functions.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
