--- a/public/functions.html
+++ b/public/functions.html
@@ -14,7 +14,7 @@ Version 0.0.1
    Good reference to Javascript functions</a><br>
 Functions are used to sensibly organzie code. Then they are "Called" elsewhere.
 Information can also be passed to functions (that's more advanced).
-<h4> Example Functions code‹/h4> <pre>
+<h4> Example Functions code</h4> <pre>
 function myGrabNumber (){
 return parseInt(document.getElementById('myText01').value)
 }
