--- a/public/functions.html
+++ b/public/functions.html
@@ -10,7 +10,7 @@ return myReply
 </script>
 Version 0.0.2
 <h2 align center›t1a09-functions-by-Manvir.html</h2>
-<a href-"https: //www.w3schools.com/js/js_functions.asp")
+<a href-"https: //www.w3schools.com/js/js_functions.asp">
    Good reference to Javascript functions</a><br>
 Functions are used to sensibly organzie code. Then they are "Called" elsewhere.
 Information can also be passed to functions (that's more advanced).
