--- a/public/functions.html
+++ b/public/functions.html
@@ -21,5 +21,7 @@ return parseInt(document.getElementById('myText01').value)
 </pre>
 <h4> Example working code</h4>
 ‹input type=text id="myText01" value="3"›<br>
-<input type-button value= "Function Example" onClick="{
-document. getElementById('myDiv01'). innerHTML - myExampleFunction
+<input type=button value= "Function Example" onClick="{
+document.getElementById('myDiv01').innerHTML = myExampleFunction
+                                                      }">
+<div id="myDiv01">...</div>
