--- a/public/functions.html
+++ b/public/functions.html
@@ -20,7 +20,7 @@ return parseInt(document.getElementById('myText01').value)
 }
 </pre>
 <h4> Example working code</h4>
-‹input type=text id="myText01" value="3"›<br>
+<input type=text id="myText01" value="3"><br>
 <input type=button value= "Function Example" onClick="{
 document.getElementById('myDiv01').innerHTML = myExampleFunction
                                                       }">
