--- a/public/functions.html
+++ b/public/functions.html
@@ -2,14 +2,13 @@
   function myExampleFunction(){
 let myIn01 = parseInt (document.getElementById('myText01').value)
 let mySum = myIn01 + myIn01
-let myReply = myIn01 +
-' + myIn01 + '
-=
-* + mySum
+let myReply = myIn01 + ' + ' + myIn01 + ' = ' + mySum
 return myReply
+  }
+  
 </script>
-Version 0.0.2
-<h2 align center›t1a09-functions-by-Manvir.html</h2>
+Version 0.0.3
+<h2 align center›functions-by-Manvir.html</h2>
 <a href-"https: //www.w3schools.com/js/js_functions.asp">
    Good reference to Javascript functions</a><br>
 Functions are used to sensibly organzie code. Then they are "Called" elsewhere.
@@ -19,9 +18,12 @@ function myGrabNumber (){
 return parseInt(document.getElementById('myText01').value)
 }
 </pre>
+
+
 <h4> Example working code</h4>
+
 <input type=text id="myText01" value="3"><br>
 <input type=button value= "Function Example" onClick="{
-document.getElementById('myDiv01').innerHTML = myExampleFunction
+document.getElementById('myDiv01').innerHTML = myExampleFunction()
                                                       }">
 <div id="myDiv01">...</div>
