--- a/public/functions.html
+++ b/public/functions.html
@@ -7,23 +7,22 @@ return myReply
   }
   
 </script>
-Version 0.0.3
-<h2 align center›functions-by-Manvir.html</h2>
-<a href-"https: //www.w3schools.com/js/js_functions.asp">
+Version 0.0.4
+<h2 align center>functions-by-Manvir.html</h2>
+<a href="https://www.w3schools.com/js/js_functions.asp">
    Good reference to Javascript functions</a><br>
 Functions are used to sensibly organzie code. Then they are "Called" elsewhere.
 Information can also be passed to functions (that's more advanced).
 <h4> Example Functions code</h4> <pre>
-function myGrabNumber (){
-return parseInt(document.getElementById('myText01').value)
+function myGrabNumber(){
+  return parseInt(document.getElementById('myText01').value);
 }
 </pre>
 
-
 <h4> Example working code</h4>
 
-<input type=text id="myText01" value="3"><br>
-<input type=button value= "Function Example" onClick="{
-document.getElementById('myDiv01').innerHTML = myExampleFunction()
-                                                      }">
+<input type="text" id="myText01" value="3"><br>
+<input type="button" value="Function Example" onClick="{
+  document.getElementById('myDiv01').innerHTML = myExampleFunction();
+}">
 <div id="myDiv01">...</div>
