--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@ hi
   <li><a href="sound.html">sound.html</a>
   <li><a href="sort.html">sort.html</a>
   <li><a href="functions.html">functions.html</a>
-  <li><a href="..">...</a>
+  <li><a href="events.html">events.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
