--- a/public/events.html
+++ b/public/events.html
@@ -7,16 +7,16 @@ Events are HTML code that activates Javascript code
 alert('how are you?')
 ]" &gt </pre>
 <h4> Example working code</h4>
-‹input type=text id="myText01" value="3"›<br>
-<input type-button value="Example onClick" onClick-"{
-document. getElementById('myDiv01').innerHTML - document. getElementById('myText01*) .value
-1">
-<div id-"myDiv01">...‹/div>
+<input type=text id="myText01" value="3"><br>
+<input type=button value="Example onClick" onClick-"{
+document.getElementById('myDiv01').innerHTML=document.getElementById('myText01').value
+}">
+<div id="myDiv01">...</div>
 <b id="myB01" onMouseOut=" {
-document. getElementById('myB01').innerHTML = 'This is bold*
-onMouseOver=*{
-document.getElementById('myB01'). innerHTML - *This is cool*
-> This is bold</b>
-<brs
+document.getElementById('myB01').innerHTML = 'This is bold'
+onMouseOver="{
+document.getElementById('myB01').innerHTML = 'This is cool'
+}"      > This is bold</b>
+<br>
 You do at least 8 other events: <br>
 onClick, onDbClick, onChange, onBlue, onFocus, onMouseMove, onTouch, onKeyDown, onKeyPress, onDragStart, onTouchStant, onTouchEnd, onTouchMove
