--- a/public/events.html
+++ b/public/events.html
@@ -1,4 +1,4 @@
-Version 0.0.3
+Version 0.0.4
 <h2 align="center">tla10-Events-by-Manvir</h2>
 <a href="https://way2tutorial.com/html/html5_events_handler_list.php">Good reference to HTML Events</a><br>
 Events are HTML code that activates Javascript code
@@ -22,3 +22,6 @@ Events are HTML code that activates Javascript code
 <br>
 You do at least 8 other events: <br>
 onClick, onDbClick, onChange, onBlue, onFocus, onMouseMove, onTouch, onKeyDown, onKeyPress, onDragStart, onTouchStant, onTouchEnd, onTouchMove
+
+
+<input type="text" id="myInput" onchange="updateValue()">
