--- a/public/events.html
+++ b/public/events.html
@@ -1,4 +1,4 @@
-Version 0.0.5
+Version 0.0.6
 <h2 align="center">Events-by-Manvir</h2>
 <a href="https://way2tutorial.com/html/html5_events_handler_list.php">Good reference to HTML Events</a><br>
 Events are HTML code that activates Javascript code
@@ -24,17 +24,12 @@ You do at least 8 other events: <br>
 onClick, onDbClick, onChange, onBlue, onFocus, onMouseMove, onTouch, onKeyDown, onKeyPress, onDragStart, onTouchStant, onTouchEnd, onTouchMove <br>
 
 
-<input type="text" id="myInput" onchange="updateValue()">
+<input type="text" id="myInput" onchange="updateValue()"> <br>
 
 
 
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Using onblur Attribute</title>
-</head>
-<body>
+
 	<label for="myInput">Enter a number:</label>
 	<input type="text" id="myInput" onblur="validateInput()">
 	<p id="error"></p>
@@ -48,6 +43,4 @@ onClick, onDbClick, onChange, onBlue, onFocus, onMouseMove, onTouch, onKeyDown, 
 			}
 		}
 	</script>
-</body>
-</html>
 
