--- a/public/events.html
+++ b/public/events.html
@@ -43,4 +43,17 @@ onClick, onDbClick, onChange, onBlue, onFocus, onMouseMove, onTouch, onKeyDown, 
 			}
 		}
 	</script>
+<br>
+
+
+
+
+
+<p>Press any key to show an alert message:</p>
+	<script>
+		function showAlert() {
+			alert("You pressed a key!");
+		}
+	</script>
+	<input type="text" onkeypress="showAlert()">
 
