--- a/public/events.html
+++ b/public/events.html
@@ -55,7 +55,7 @@ onClick, onDbClick, onChange, onBlue, onFocus, onMouseMove, onTouch, onKeyDown, 
 			alert("You pressed a key!");
 		}
 	</script>
-	<input type="text" onkeypress="showAlert()"> <br>
+	<input type="text" onkeypress="showAlert()"> <br><br><br>
 
 
 
