--- a/public/events.html
+++ b/public/events.html
@@ -59,7 +59,7 @@ onClick, onDbClick, onChange, onBlue, onFocus, onMouseMove, onTouch, onKeyDown, 
 
 
 
-
+Hover your cursor over this box <br>
 <html>
 <head>
 <style>
