--- a/public/events.html
+++ b/public/events.html
@@ -177,3 +177,5 @@ Hover your cursor over this box <br>
 	<div id="box3" class="box" draggable="true" ondragstart="dragStart(event)"></div>
 	<p>Drag the boxes to rearrange them.</p>
 </body>
+	
+	 <body style="background-color:powderblue;">
