--- a/public/functions.html
+++ b/public/functions.html
@@ -24,3 +24,5 @@ function myGrabNumber(){
 document.getElementById('myDiv01').innerHTML = myExampleFunction();
 }">
 <div id="myDiv01">...</div> 
+
+ <body style="background-color:powderblue;">
