--- a/public/translate.html
+++ b/public/translate.html
@@ -19,3 +19,6 @@
    let myVoice = 'Russian Female'
    responsiveVoice.speak(document.getElementById('google_translate_element').innerText, myVoice, {pitch: 1, rate: 1, volume : 1})                                              
 }"><br><br>
+
+
+ <body style="background-color:powderblue;">
