--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@ hi
   <li><a href="sort.html">sort.html</a>
   <li><a href="functions.html">functions.html</a>
   <li><a href="events.html">events.html</a>
-  <li><a href="..">...</a>
+  <li><a href="arrays.html">arrays.html</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
   <li><a href="..">...</a>
