--- a/public/arrays.html
+++ b/public/arrays.html
@@ -1,6 +1,6 @@
 
 Version 0.0.1
-<h2 align-center>t2a01-arrays-by-Fred.html</h2>
+<h2 align-center>Arrays-by-Manvir.html</h2>
 <a href-""›Good reference to Javasccript Arrays</a><bro
 Arrays are stored numbered variables
 <h4> Example Array code</h4> <pre>
