--- a/public/arrays.html
+++ b/public/arrays.html
@@ -1,7 +1,7 @@
 
 Version 0.0.1
 <h2 align-center>Arrays-by-Manvir.html</h2>
-<a href-""›Good reference to Javasccript Arrays</a><bro
+<a href-""›Good reference to Javasccript Arrays</a><br>
 Arrays are stored numbered variables
 <h4> Example Array code</h4> <pre>
 myArray = new Array()
