--- a/public/canvas.html
+++ b/public/canvas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>t2a08-canvas by Fred</title>
+	<title>canvas by Manvir</title>
 	<style>
 		.button-group {
 			margin-bottom: 10px;
