--- a/public/canvas.html
+++ b/public/canvas.html
@@ -1,3 +1,4 @@
+Version 0.0.4
 <!DOCTYPE html>
 <html>
 <head>
@@ -78,7 +79,7 @@
 	 
 	 
 	 
-	 
+	 <script>
 	 // set up global variables
 let myCanvas = document.getElementById('myCoolTag');
 let myContext;
@@ -132,4 +133,4 @@ document.querySelectorAll('button').forEach(button => {
     }
   });
 });
-
+	 </script>
